--- a/src/template/info-country.hbs
+++ b/src/template/info-country.hbs
@@ -1,18 +1,18 @@
 <div class="country__main-box">
-    <h1 class="country__title">{{name}}</h1>
+    <h1 class="country__title">{{name.common}}</h1>
     <div class="country__info-box">
         <div>
             <p>Capital:{{capital}}</p>
             <p>Population:{{population}}</p>
             <p>Languages:{{languages.name}}</p>
             <ul>
-            {{#each languages}}
-                <li>{{this.name}}</li>
-            {{/each}}
+                {{#each languages}}
+                    <li>{{this}}</li>
+                {{/each}}
             </ul>
         </div>
         <div class="country__flag-box">
-            <img src="{{flag}}" alt="{{name}}" 
+            <img src="{{flags.png}}" alt="{{name}}" 
             width="350px" height="250px">
         </div>
     </div>
